# Data-Curator-Extensions_Yahoo-Finance

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: .env.template  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: main.yml
src/kaxanuk/data_curator/data_providers/yahoo_finance/: __init__.py
src/kaxanuk/data_curator_extensions/yahoo_finance/: __init__.py  yahoo_finance.py
tests/e2e/: get_annual_data_test.py
